--- a/assets/base.css
+++ b/assets/base.css
@@ -32,6 +32,11 @@
     --accents-9: #212529;
     --font-sans: -apple-system, system-ui, BlinkMacSystemFont, "Helvetica Neue",
         "Helvetica", sans-serif;
+
+    --shadow-0: 0 1px 4px rgb(0 0 0 / 14%);
+    --shadow-1: 1px 1px 3px rgb(0 0 0 / 17%);
+    --shadow-2: 1px 1px 7px rgb(0 0 0 / 10%);
+    --shadow-3: 0 2rem 5rem rgba(0, 0, 0, 0.6);
 }
 
 html {
