--- a/assets/base.css
+++ b/assets/base.css
@@ -15,6 +15,7 @@
     --cyan: #22b8cf;
     --green: #37b679;
     --red: #da3c3c;
+    --orange-red: #e00b25;
     --pink: #e64980;
     --purple: #f81ce5;
     --blue: #0070f3;
