--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,8 +4,7 @@
 
 @import "@assets/mixins";
 
-html,
-body {
+html {
     padding: 0;
     margin: 0;
     /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -33,6 +32,10 @@ body {
     }
 }
 
+body {
+    line-height: 1;
+}
+
 a {
     color: inherit;
     text-decoration: none;
@@ -42,4 +45,24 @@ a {
 ::before,
 ::after {
     box-sizing: border-box;
+}
+
+#__next {
+    font-size: 15px;
+    font-family: HelveticaNowText, Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    letter-spacing: -0.05em;
+    color: #191919;
+
+    @media only screen and (min-width: 1024px) {
+        font-size: 1.2vw;
+    }
+
+    @media only screen and (min-width: 1024px) and (max-width: 1125px) {
+        font-size: 13.5px;
+    }
+
+    @media only screen and (min-width: 1500px) {
+        font-size: 18px;
+    }
 }
