--- a/assets/base.css
+++ b/assets/base.css
@@ -21,6 +21,7 @@
     --blue: #0070f3;
     --violet: #5f3dc4;
     --violet-light: #7048e8;
+    --grey: #676767;
     --accents-0: #f8f9fa;
     --accents-1: #f1f3f5;
     --accents-2: #e9ecef;
