--- a/assets/base.css
+++ b/assets/base.css
@@ -22,6 +22,7 @@
     --violet: #5f3dc4;
     --violet-light: #7048e8;
     --grey: #676767;
+    --grey-light: #f5f5f5;
     --accents-0: #f8f9fa;
     --accents-1: #f1f3f5;
     --accents-2: #e9ecef;
