Figured out how to use Rating from mui with react-form-hook, I needed to use the Controller with render option. Need to manage checking options with react-form-hook, I already found the documentation I just need to implement correctely

--- a/assets/base.css
+++ b/assets/base.css
@@ -15,6 +15,7 @@
     --cyan: #22b8cf;
     --green: #37b679;
     --red: #da3c3c;
+    --red-light: #ea1332;
     --orange-red: #e00b25;
     --pink: #e64980;
     --purple: #f81ce5;
