--- a/assets/base.css
+++ b/assets/base.css
@@ -24,6 +24,7 @@
     --violet-light: #7048e8;
     --grey: #676767;
     --grey-light: #f5f5f5;
+    --black-blue: #23293c;
     --accents-0: #f8f9fa;
     --accents-1: #f1f3f5;
     --accents-2: #e9ecef;
