Implemented the UI for technological products a.k.a they have a different UI than clothing products. Just need to adjust the reviews for the diffrent type of products

--- a/assets/base.css
+++ b/assets/base.css
@@ -20,6 +20,7 @@
     --pink: #e64980;
     --purple: #f81ce5;
     --blue: #0070f3;
+    --blue-dark: #073068;
     --violet: #5f3dc4;
     --violet-light: #7048e8;
     --grey: #676767;
