Setting text-size-adjust so it fixes the line-height issues in mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,6 +51,9 @@ a {
     box-sizing: border-box;
 
     -webkit-tap-highlight-color: transparent;
+
+    text-size-adjust: none;
+    -webkit-text-size-adjust: none;
 }
 
 #__next {
@@ -59,7 +62,6 @@ a {
     font-weight: 400;
     letter-spacing: -0.05em;
     color: #191919;
-    text-size-adjust: none;
 
     @media only screen and (min-width: 1024px) {
         font-size: 1.2vw;
