Disabling appearance in css that cause UI issues in IOS/Safari

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -54,6 +54,10 @@ a {
 
     text-size-adjust: none;
     -webkit-text-size-adjust: none;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 #__next {
