--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -55,9 +55,14 @@ a {
     text-size-adjust: none;
     -webkit-text-size-adjust: none;
 
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+    [type="button"],
+    [type="reset"],
+    [type="submit"],
+    button {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+    }
 }
 
 #__next {
